--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ game.taquin.default-board-size=4
 game.connectfour.default-type-game=connectfour
 game.connectfour.default-player-count=2
 game.connectfour.default-board-size=7
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
