--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,8 @@ game.connectfour.default-player-count=2
 game.connectfour.default-board-size=7
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_db
+spring.datasource.url=jdbc:mysql://localhost:3603/spring_db
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
