--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,20 +12,4 @@ game.connectfour.default-type-game=connectfour
 game.connectfour.default-player-count=2
 game.connectfour.default-board-size=7
 
-
-#spring.datasource.url=jdbc:mysql://localhost:3603/spring_db
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=mysql
