--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ game.connectfour.default-type-game=connectfour
 game.connectfour.default-player-count=2
 game.connectfour.default-board-size=7
 
-spring.profiles.active=h2
+spring.profiles.active=mysql
